add the job application apis
